// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test app render test app 1`] = `
<DocumentFragment>
   
  <div
    class="sc-bkzZxe dcsJkL"
  />
  <div
    class="sc-dQppl ceXveq"
  >
    <img
      class="sc-jrAGrp gJmdWS"
      src="logo2x.png"
    />
    <form
      class="sc-bqyKva efhoDW"
    >
      <h1>
        EXPLORE O UNIVERSO
      </h1>
      <p>
        Mergulhe no domínio deslumbrante de todos os personagens clássicos que você ama - e aqueles que você descobrirá em breve!
      </p>
      <input
        autocomplete="off"
        class="sc-gsTCUz ecbFyq"
        name="searchBar"
        placeholder="Procure por heróis"
        type="text"
        value="heroname"
      />
    </form>
    <div
      class="sc-dlfnbm cXQzlp sc-crrsfI hBrwsU sc-kstrdz jjJtjZ"
    >
      <p>
        Nenhum herói encontrado
      </p>
      <div
        class="sc-dlfnbm cXQzlp"
      >
        <div
          class="orderName"
        >
          <img
            alt="hero"
            src="hero.png"
          />
          <p>
            Ordenar por nome - A/Z
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="ordered"
          >
            <img
              alt="toggleIco"
              src="ToggleOn.png"
            />
          </span>
        </div>
        <div
          class="favorites"
        >
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="onlyFavorites"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
            <p>
              Somente favoritos
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-fodVxV rFSyE"
    />
    <footer
      class="sc-hBEYos eKPEAS"
    />
  </div>
</DocumentFragment>
`;

exports[`test app test app with snack message 1`] = `
<DocumentFragment>
   
  <div
    class="sc-bkzZxe eYgBOG"
    height="0"
    open=""
  >
    foo bar
  </div>
  <div
    class="sc-dQppl ceXveq"
  >
    <img
      class="sc-jrAGrp gJmdWS"
      src="logo2x.png"
    />
    <form
      class="sc-bqyKva efhoDW"
    >
      <h1>
        EXPLORE O UNIVERSO
      </h1>
      <p>
        Mergulhe no domínio deslumbrante de todos os personagens clássicos que você ama - e aqueles que você descobrirá em breve!
      </p>
      <input
        autocomplete="off"
        class="sc-gsTCUz ecbFyq"
        name="searchBar"
        placeholder="Procure por heróis"
        type="text"
        value="heroname"
      />
    </form>
    <div
      class="sc-dlfnbm cXQzlp sc-crrsfI hBrwsU sc-kstrdz jjJtjZ"
    >
      <p>
        Encontrados 1493 heróis
      </p>
      <div
        class="sc-dlfnbm cXQzlp"
      >
        <div
          class="orderName"
        >
          <img
            alt="hero"
            src="hero.png"
          />
          <p>
            Ordenar por nome - A/Z
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="ordered"
          >
            <img
              alt="toggleIco"
              src="ToggleOn.png"
            />
          </span>
        </div>
        <div
          class="favorites"
        >
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="onlyFavorites"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
            <p>
              Somente favoritos
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-fodVxV rFSyE"
    >
      <div
        class="character-card"
        id="1017100"
      >
        <div
          class="sc-kEjbxe bvYdcj"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            A-Bomb (HAS)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009144"
      >
        <div
          class="sc-kEjbxe fmsBqc"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            A.I.M.
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010699"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Aaron Stack
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009146"
      >
        <div
          class="sc-kEjbxe jnPnxf"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abomination (Emil Blonsky)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1016823"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abomination (Ultimate)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009148"
      >
        <div
          class="sc-kEjbxe kQeElO"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Absorbing Man
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009149"
      >
        <div
          class="sc-kEjbxe ggEctL"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abyss
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010903"
      >
        <div
          class="sc-kEjbxe jYquWb"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abyss (Age of Apocalypse)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011266"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Adam Destine
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010354"
      >
        <div
          class="sc-kEjbxe hxMcdC"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Adam Warlock
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010846"
      >
        <div
          class="sc-kEjbxe hefFUj"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Aegis (Trey Rollins)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011297"
      >
        <div
          class="sc-kEjbxe cHRvPQ"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agent Brand
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011031"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agent X (Nijo)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009150"
      >
        <div
          class="sc-kEjbxe jUPNeI"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agent Zero
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011198"
      >
        <div
          class="sc-kEjbxe BAgXC"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agents of Atlas
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011175"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Aginar
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011136"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Air-Walker (Gabriel Lan)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011176"
      >
        <div
          class="sc-kEjbxe bpGQfa"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Ajak
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010870"
      >
        <div
          class="sc-kEjbxe lmFYDe"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Ajaxis
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
    </div>
    <footer
      class="sc-hBEYos eKPEAS"
    />
  </div>
</DocumentFragment>
`;

exports[`test app test app with snack message 2`] = `
<DocumentFragment>
   
  <div
    class="sc-bkzZxe ikWHCS"
    height="0"
  >
    foo bar
  </div>
  <div
    class="sc-dQppl ceXveq"
  >
    <img
      class="sc-jrAGrp gJmdWS"
      src="logo2x.png"
    />
    <form
      class="sc-bqyKva efhoDW"
    >
      <h1>
        EXPLORE O UNIVERSO
      </h1>
      <p>
        Mergulhe no domínio deslumbrante de todos os personagens clássicos que você ama - e aqueles que você descobrirá em breve!
      </p>
      <input
        autocomplete="off"
        class="sc-gsTCUz ecbFyq"
        name="searchBar"
        placeholder="Procure por heróis"
        type="text"
        value="heroname"
      />
    </form>
    <div
      class="sc-dlfnbm cXQzlp sc-crrsfI hBrwsU sc-kstrdz jjJtjZ"
    >
      <p>
        Encontrados 1493 heróis
      </p>
      <div
        class="sc-dlfnbm cXQzlp"
      >
        <div
          class="orderName"
        >
          <img
            alt="hero"
            src="hero.png"
          />
          <p>
            Ordenar por nome - A/Z
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="ordered"
          >
            <img
              alt="toggleIco"
              src="ToggleOn.png"
            />
          </span>
        </div>
        <div
          class="favorites"
        >
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="onlyFavorites"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
            <p>
              Somente favoritos
            </p>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-fodVxV rFSyE"
    >
      <div
        class="character-card"
        id="1017100"
      >
        <div
          class="sc-kEjbxe bvYdcj"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            A-Bomb (HAS)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009144"
      >
        <div
          class="sc-kEjbxe fmsBqc"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            A.I.M.
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010699"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Aaron Stack
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009146"
      >
        <div
          class="sc-kEjbxe jnPnxf"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abomination (Emil Blonsky)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1016823"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abomination (Ultimate)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009148"
      >
        <div
          class="sc-kEjbxe kQeElO"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Absorbing Man
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009149"
      >
        <div
          class="sc-kEjbxe ggEctL"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abyss
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010903"
      >
        <div
          class="sc-kEjbxe jYquWb"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Abyss (Age of Apocalypse)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011266"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Adam Destine
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010354"
      >
        <div
          class="sc-kEjbxe hxMcdC"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Adam Warlock
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010846"
      >
        <div
          class="sc-kEjbxe hefFUj"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Aegis (Trey Rollins)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011297"
      >
        <div
          class="sc-kEjbxe cHRvPQ"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agent Brand
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011031"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agent X (Nijo)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1009150"
      >
        <div
          class="sc-kEjbxe jUPNeI"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agent Zero
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011198"
      >
        <div
          class="sc-kEjbxe BAgXC"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Agents of Atlas
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011175"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Aginar
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011136"
      >
        <div
          class="sc-kEjbxe iiykAU"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Air-Walker (Gabriel Lan)
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1011176"
      >
        <div
          class="sc-kEjbxe bpGQfa"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Ajak
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
      <div
        class="character-card"
        id="1010870"
      >
        <div
          class="sc-kEjbxe lmFYDe"
          data-testid="charCard"
          height="0"
        />
        <div
          class="sc-iqHYGH kopUWx"
        >
          <p>
            Ajaxis
          </p>
          <span
            class="sc-hKgILt kAHmuW"
            data-testid="toggleFavorite"
          >
            <img
              alt="toggleIco"
              src="heartEmpty.png"
            />
          </span>
        </div>
      </div>
    </div>
    <footer
      class="sc-hBEYos eKPEAS"
    />
  </div>
</DocumentFragment>
`;
